macro/tests/fails/not_a_string.stderr
error: The second argument must be a literal string
 --> $DIR/not_a_string.rs:6:27
  |
6 |     colored!(&mut writer, not_a_string);
  |                           ^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
